@@ -12,7 +12,7 @@
     <application>Control Center</application> a new central control panel for
     GNOME's accessibility features (courtesy of Bill Haneman) and integration with
     <application>Dr. Wright</application>, an application that gives you
-    timed breaks from your busy work day.
+    timed breaks from your busy work day, written by Richard Hult.
 
     <figure id="rncontrolcenterscreenshot"> 
         <title>Typing Break</title> 
