@@ -109,7 +109,7 @@
       
         <para>
           Active contributors to GNOME &version; development include Red Hat,
-          Sun Microsystems, Ximian, and Mandrake, all established
+          Sun Microsystems, Ximian, and MandrakeSoft, all established
           experts who can help with your UNIX or Linux deployment.
         </para>
       
