@@ -1,5 +1,14 @@
 2003-09-10  Andrew Sobala  <aes@gnome.org>
 
+	* release-notes.xml:
+	* rncontrolcenter.xml:
+	* rndesktop.xml:
+	* rninstallation.xml:
+	* rnthanks.xml:
+	* rnwhy.xml: last minute updates
+
+2003-09-10  Andrew Sobala  <aes@gnome.org>
+
 	* rninstallation.xml: s/gnome-control-center/control-center/,
 	s/procman/gnome-system-monitor/, s/meta-.*//, s/gnome-common//,
 	moved esound up since libgnome has a condititional dep on it.
